updated the link so when click on title , will take you to the executable program

--- a/index.html
+++ b/index.html
@@ -590,13 +590,13 @@ Smartphone Compatible web template" />
 
 
         <div class="col-md-6 news-text">
-          <h3> <a href="https://github.com/swong452/ColumbiaCodingClass/tree/master/homework/wk1" target="_blank">Code Refractor</a></h3>
+          <h3> <a href="https://swong452.github.io/github.io/hw1/" target="_blank">Code Refractor</a></h3>
           <ul class="news">
             <li>HTML</li>
             <li>CSS</li>
             <li>GIT</li>
           </ul>
-          <p><strong> <a href='https://swong452.github.io/github.io/hw1/' target="_blank">Code
+          <p><strong> <a href='https://github.com/swong452/ColumbiaCodingClass/tree/master/homework/wk1' target="_blank">Code
               Refractor</a> </strong> 
             Get familar with HTML, CSS, and TAG</p>
           <a href="#" data-toggle="modal" data-target="#codeRef" class="read hvr-shutter-in-horizontal">Read More</a>
@@ -632,7 +632,7 @@ Smartphone Compatible web template" />
             <li>JavaScript</li>
             <li>JQuery</li>
           </ul>
-          <p><strong> <a href='https://swong452.github.io/HW4CodingQuiz/index.html'
+          <p><strong> <a href='https://github.com/swong452/HW4CodingQuiz'
               target="_blank">Coding Quiz</a> </strong>  Generate Questions and count the score and time.</p>
           <a href="#" data-toggle="modal" data-target="#codequiz" class="read hvr-shutter-in-horizontal">Read More</a>
         </div>
@@ -697,7 +697,7 @@ Smartphone Compatible web template" />
 
 
         <div class="col-md-6 news-text">
-          <h3> <a href="https://github.com/swong452/EmployeeSummaryOOP" target="_blank">Employee Summary OOP </a></h3>
+          <h3> <a href="https://drive.google.com/file/d/1uxwOmj7prZvkSEso2VuGLwxoeAD5fp2C/view" target="_blank">Employee Summary OOP </a></h3>
           <ul class="news">
             <li>HTML</li>
             <li>CSS</li>
@@ -705,7 +705,7 @@ Smartphone Compatible web template" />
             <li>OOP</li>
             <li>nodeJS</li>
           </ul>
-          <p><strong> <a href='https://drive.google.com/file/d/1uxwOmj7prZvkSEso2VuGLwxoeAD5fp2C/view'
+          <p><strong> <a href='https://github.com/swong452/EmployeeSummaryOOP'
               target="_blank">Employee Summary OOP </a> </strong>
             Use Object Oriented Programm with node js, create an app to add employee, manager, and interns</p>
           <a href="#" data-toggle="modal" data-target="#empsummary" class="read hvr-shutter-in-horizontal">Read More</a>
@@ -735,7 +735,7 @@ Smartphone Compatible web template" />
 
 
         <div class="col-md-6 news-text">
-          <h3> <a href="https://github.com/swong452/HW12SQLEmpTracker" target="_blank">Employee Tracker (MySQL)</a></h3>
+          <h3> <a href="https://drive.google.com/file/d/1vrluLA-l_i47UEJAm-ElnXSQG2t05thB/view" target="_blank">Employee Tracker (MySQL)</a></h3>
           <ul class="news">
             <li>HTML</li>
             <li>CSS</li>
@@ -745,7 +745,7 @@ Smartphone Compatible web template" />
             <li>MySQL</li>
           </ul>
           <p><strong> <a
-              href='https://drive.google.com/file/d/1vrluLA-l_i47UEJAm-ElnXSQG2t05thB/view' target="_blank">Employee
+              href='https://github.com/swong452/HW12SQLEmpTracker' target="_blank">Employee
               Tracker</a></strong>
             Create an app, using MySQL as DB, to ADD/View/Update Departments, Roles, and Employees</p>
           <a href="#" data-toggle="modal" data-target="#emptracker" class="read hvr-shutter-in-horizontal">Read More</a>
@@ -758,7 +758,7 @@ Smartphone Compatible web template" />
 
       <div class="news-grid w3l-agile">
         <div class="col-md-6 news-text">
-          <h3> <a href="https://github.com/swong452/HW14SequelizeReverseEngineer" target="_blank">Sequelize: Reverse
+          <h3> <a href="https://drive.google.com/file/d/1KykhWjwxAzmKEv9qhblKniX2wDCh4p8P/view?usp=sharing" target="_blank">Sequelize: Reverse
               Engineering</a></h3>
           <ul class="news">
             <li>HTML</li>
@@ -766,7 +766,7 @@ Smartphone Compatible web template" />
             <li>GIT</li>
           </ul>
           <p><strong> <a
-              href='https://drive.google.com/file/d/1KykhWjwxAzmKEv9qhblKniX2wDCh4p8P/view?usp=sharing'
+              href='https://github.com/swong452/HW14SequelizeReverseEngineer'
               target="_blank">Sequalize: Reveres Engineer</a></strong> Reverse engineer the starter code provided and create a
             tutorial for the code..</p>
           <a href="#" data-toggle="modal" data-target="#reverse" class="read hvr-shutter-in-horizontal">Read More</a>
@@ -774,13 +774,13 @@ Smartphone Compatible web template" />
 
 
         <div class="col-md-6 news-text">
-          <h3> <a href="https://github.com/swong452/HW13Burger" target="_blank"> Burger MVC ORM</a></h3>
+          <h3> <a href="https://fierce-hollows-49099.herokuapp.com/" target="_blank"> Burger MVC ORM</a></h3>
           <ul class="news">
             <li>HTML</li>
             <li>CSS</li>
             <li>GIT</li>
           </ul>
-          <p><strong> <a href='https://fierce-hollows-49099.herokuapp.com/' target="_blank">Burger
+          <p><strong> <a href='https://github.com/swong452/HW13Burger' target="_blank">Burger
               MVC ORM</a></strong>
             create a burger logger with MySQL, Node, Express, Handlebars and a homemade ORM (yum!). Be sure to follow
             the MVC design pattern; use Node and MySQL to query and route data in your app,
@@ -794,16 +794,16 @@ Smartphone Compatible web template" />
       <div class="news-grid w3l-agile">
 
         <div class="col-md-6 news-text">
-          <h3> <a href="https://github.com/tabouzeid/heimdall" target="_blank"> Hemidal Inventory System</a></h3>
+          <h3> <a href="https://mysterious-falls-36558.herokuapp.com/" target="_blank"> Hemidal Inventory System</a></h3>
           <ul class="news">
             <li>HTML</li>
             <li>CSS</li>
             <li>GIT</li>
           </ul>
-          <p><strong> <a href='https://mysterious-falls-36558.herokuapp.com/' target="_blank">Project
+          <p><strong> <a href='https://github.com/tabouzeid/heimdall' target="_blank">Project
               2: Inventory</a> </strong> Use BestBuyAPI and manual addtion of products, create an
             inventory system that can add/update/view products , along with making Orders to customer and supplier</p>
-          <a href="#" data-toggle="modal" data-target="#burger" class="read hvr-shutter-in-horizontal">Read More</a>
+          <a href="#" data-toggle="modal" data-target="#inventory" class="read hvr-shutter-in-horizontal">Read More</a>
         </div>
 
 
@@ -1441,7 +1441,7 @@ Smartphone Compatible web template" />
 
             <div class="about-inner">
               <div class="col-md-6">
-                <img src="images/SequalizeReverseEng.PNG" class="project-img" alt="about" />
+                <img src="images/Project2InventorySystem.PNG" class="project-img" alt="about" />
               </div>
               <div class="col-md-6">
                 <ul>
