add Note Taker to Heroku

--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@ Smartphone Compatible web template" />
       <div class="news-grid w3l-agile">
 
         <div class="col-md-6 news-text">
-          <h3> <a href="https://github.com/swong452/HerokuNoteTaker" target="_blank">Heroku Note Taker</a></h3>
+          <h3> <a href="https://dry-headland-05484.herokuapp.com/" target="_blank">Heroku Note Taker</a></h3>
           <ul class="news">
             <li>HTML</li>
             <li>CSS</li>
