add my own git hub and own heroku link for inventory system

--- a/index.html
+++ b/index.html
@@ -794,13 +794,13 @@ Smartphone Compatible web template" />
       <div class="news-grid w3l-agile">
 
         <div class="col-md-6 news-text">
-          <h3> <a href="https://mysterious-falls-36558.herokuapp.com/" target="_blank"> Hemidal Inventory System</a></h3>
+          <h3> <a href="https://tranquil-wave-81173.herokuapp.com/" target="_blank"> Hemidal Inventory System</a></h3>
           <ul class="news">
             <li>HTML</li>
             <li>CSS</li>
             <li>GIT</li>
           </ul>
-          <p><strong> <a href='https://github.com/tabouzeid/heimdall' target="_blank">Project
+          <p><strong> <a href='https://github.com/swong452/Project2InventorySystem' target="_blank">Project
               2: Inventory</a> </strong> Use BestBuyAPI and manual addtion of products, create an
             inventory system that can add/update/view products , along with making Orders to customer and supplier</p>
           <a href="#" data-toggle="modal" data-target="#inventory" class="read hvr-shutter-in-horizontal">Read More</a>
@@ -1745,7 +1745,7 @@ Smartphone Compatible web template" />
               <ul>
                 <li>Primary: <a href="mailto:steelerwong2005@hotmail.com">steelerwong2005@hotmail.com</a></li>
                 <li>
-                  <Secondary></Secondary>: <a href="journeydoesnotendhere@gmail.com">journeydoesnotendhere@gmail.com</a>
+                  <Secondary>Secondary</Secondary>: <a href="journeydoesnotendhere@gmail.com">journeydoesnotendhere@gmail.com</a>
                 </li>
               </ul>
             </div>
