update heroku app name easier to know what project it is

--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ Smartphone Compatible web template" />
 
 
         <div class="col-md-6 news-text">
-          <h3> <a href="https://fierce-hollows-49099.herokuapp.com/" target="_blank"> Burger MVC ORM</a></h3>
+          <h3> <a href="https://wk13-burger-mvc-samson.herokuapp.com/" target="_blank"> Burger MVC ORM</a></h3>
           <ul class="news">
             <li>HTML</li>
             <li>CSS</li>
@@ -794,7 +794,7 @@ Smartphone Compatible web template" />
       <div class="news-grid w3l-agile">
 
         <div class="col-md-6 news-text">
-          <h3> <a href="https://tranquil-wave-81173.herokuapp.com/" target="_blank"> Hemidal Inventory System</a></h3>
+          <h3> <a href="https://inventory-system-proj2-samson.herokuapp.com/" target="_blank"> Hemidal Inventory System</a></h3>
           <ul class="news">
             <li>HTML</li>
             <li>CSS</li>
@@ -808,13 +808,13 @@ Smartphone Compatible web template" />
 
 
         <div class="col-md-6 news-text">
-          <h3> <a href="https://" target="_blank">Coming Soon</a></h3>
+          <h3> <a href="https://wk17-health-tracker-samson.herokuapp.com" target="_blank">Health Tracker</a></h3>
           <ul class="news">
             <li>HTML</li>
             <li>CSS</li>
             <li>GIT</li>
           </ul>
-          <p><strong> <a href='https://xxx' target="_blank">Coming Soon</a></strong> 
+          <p><strong> <a href='https://github.com/swong452/wk17WorkOutTracker' target="_blank">Coming Soon</a></strong> 
           </p>
           <a href="#" data-toggle="modal" data-target="#ckgsMdl" class="read hvr-shutter-in-horizontal">Read More</a>
         </div>
